// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notes /> handles add note 1`] = `
<div
  className="note"
>
  <div
    className="note-top-bar"
  >
    <Link
      back={true}
      onClick={[Function]}
      to="/notes"
    />
  </div>
  <div
    className="note-body"
    onMouseDown={[Function]}
  >
    <span
      className="ui-text ui-text--body note-timestamp"
    >
      October 1, 2019 at 11:11 AM
    </span>
    <input
      className="note-input note-input--title"
      onChange={[Function]}
      onKeyUp={[Function]}
      value=""
    />
    <textarea
      className="note-input note-input--text"
      onChange={[Function]}
      value=""
    />
  </div>
  <div
    className="note-bottom-bar"
  >
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-trash fas fa-trash"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        Delete note
      </span>
    </button>
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-edit fas fa-edit"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        New note
      </span>
    </button>
  </div>
</div>
`;

exports[`<Notes /> handles back to notes 1`] = `
<div
  className="note"
>
  <div
    className="note-top-bar"
  >
    <Link
      back={true}
      onClick={[Function]}
      to="/notes"
    />
  </div>
  <div
    className="note-body"
    onMouseDown={[Function]}
  >
    <span
      className="ui-text ui-text--body note-timestamp"
    >
      October 1, 2019 at 11:11 AM
    </span>
    <input
      className="note-input note-input--title"
      onChange={[Function]}
      onKeyUp={[Function]}
      value="Example note"
    />
    <textarea
      className="note-input note-input--text"
      onChange={[Function]}
      value="This is a note"
    />
  </div>
  <div
    className="note-bottom-bar"
  >
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-trash fas fa-trash"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        Delete note
      </span>
    </button>
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-edit fas fa-edit"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        New note
      </span>
    </button>
  </div>
</div>
`;

exports[`<Notes /> handles back to notes 2`] = `
<div
  className="notes-app"
>
  <h1
    className="ui-text ui-text--display"
  >
    Notes
  </h1>
  <ul
    className="notes-app-list"
  >
    <li
      className="notes-app-list-item"
    >
      <div
        className="note-preview"
        onMouseDown={[Function]}
      >
        <Link
          onClick={[Function]}
          to={
            Object {
              "pathname": "/notes/k17zbp9c",
              "state": Object {
                "id": "k17zbp9c",
              },
            }
          }
        >
          <h2
            className="ui-text ui-text--display note-preview-title-display"
          >
            Example note
          </h2>
          <div
            className="note-preview-body"
          >
            <span
              className="ui-text ui-text--body note-preview-date-display"
            >
              11:11 AM
            </span>
            <span
              className="ui-text ui-text--body note-preview-text-display"
            >
              This is a note
            </span>
          </div>
        </Link>
        <button
          className="ui-btn ui-btn--delete"
          onClick={[Function]}
          type="button"
        >
          Delete
        </button>
      </div>
    </li>
  </ul>
  <div
    className="notes-app-bottom-bar"
  >
    <p
      className="ui-text ui-text--body"
    >
      1 Note
    </p>
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-edit fas fa-edit"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        New note
      </span>
    </button>
  </div>
</div>
`;

exports[`<Notes /> handles change for multiple notes 1`] = `
<div
  className="note"
>
  <div
    className="note-top-bar"
  >
    <Link
      back={true}
      onClick={[Function]}
      to="/notes"
    />
  </div>
  <div
    className="note-body"
    onMouseDown={[Function]}
  >
    <span
      className="ui-text ui-text--body note-timestamp"
    >
      November 11, 2019 at 9:33 AM
    </span>
    <input
      className="note-input note-input--title"
      onChange={[Function]}
      onKeyUp={[Function]}
      value="Another note"
    />
    <textarea
      className="note-input note-input--text"
      onChange={[Function]}
      value="Updated note body"
    />
  </div>
  <div
    className="note-bottom-bar"
  >
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-trash fas fa-trash"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        Delete note
      </span>
    </button>
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-edit fas fa-edit"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        New note
      </span>
    </button>
  </div>
</div>
`;

exports[`<Notes /> handles change note 1`] = `
<div
  className="note"
>
  <div
    className="note-top-bar"
  >
    <Link
      back={true}
      onClick={[Function]}
      to="/notes"
    />
  </div>
  <div
    className="note-body"
    onMouseDown={[Function]}
  >
    <span
      className="ui-text ui-text--body note-timestamp"
    >
      October 1, 2019 at 11:11 AM
    </span>
    <input
      className="note-input note-input--title"
      onChange={[Function]}
      onKeyUp={[Function]}
      value="Updated note"
    />
    <textarea
      className="note-input note-input--text"
      onChange={[Function]}
      value=""
    />
  </div>
  <div
    className="note-bottom-bar"
  >
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-trash fas fa-trash"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        Delete note
      </span>
    </button>
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-edit fas fa-edit"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        New note
      </span>
    </button>
  </div>
</div>
`;

exports[`<Notes /> handles delete for multiple notes 1`] = `
<div
  className="note"
>
  <div
    className="note-top-bar"
  >
    <Link
      back={true}
      onClick={[Function]}
      to="/notes"
    />
  </div>
  <div
    className="note-body"
    onMouseDown={[Function]}
  >
    <span
      className="ui-text ui-text--body note-timestamp"
    >
      November 11, 2019 at 9:33 AM
    </span>
    <input
      className="note-input note-input--title"
      onChange={[Function]}
      onKeyUp={[Function]}
      value="Example note"
    />
    <textarea
      className="note-input note-input--text"
      onChange={[Function]}
      value="This is a note"
    />
  </div>
  <div
    className="note-bottom-bar"
  >
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-trash fas fa-trash"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        Delete note
      </span>
    </button>
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-edit fas fa-edit"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        New note
      </span>
    </button>
  </div>
</div>
`;

exports[`<Notes /> renders correctly 1`] = `
<div
  className="notes-app"
>
  <h1
    className="ui-text ui-text--display"
  >
    Notes
  </h1>
  <div
    className="notes-app-bottom-bar"
  >
    <p
      className="ui-text ui-text--body"
    >
      No Notes
    </p>
    <button
      className="ui-btn ui-btn--with-icon"
      onClick={[Function]}
      type="button"
    >
      <i
        className="ui-icon ui-icon-edit fas fa-edit"
      />
      <span
        className="ui-text ui-text--accessible"
      >
        New note
      </span>
    </button>
  </div>
</div>
`;
